--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "lint": "eslint .",
     "prepare": "husky",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "postinstall": "husky install"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -34,6 +35,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "latest",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
