refactor: atomic design components structure

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/eslintrc": "^3",
+    "@hcaptcha/react-hcaptcha": "^1.14.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
