--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postinstall": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
+    "app/**/*.{ts,tsx}": [
       "eslint --fix --max-warnings=0",
       "prettier --write"
     ]
