feat: add eslint rules

--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev --turbopack",
+    "lint": "eslint .",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
     "prepare": "husky",
+    "lint:fix": "eslint . --fix",
     "commitlint": "commitlint --edit",
     "postinstall": "husky install"
   },
   "lint-staged": {
     "app/**/*.{ts,tsx}": [
-      "eslint --fix --max-warnings=0",
+      "eslint . --fix --max-warnings=0",
       "prettier --write"
     ]
   },
@@ -68,6 +69,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "postcss": "^8",
