--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
+  "name": "nomi-collaborative-expense-tracker",
+  "author": "Nomi Developers",
   "private": true,
-  "name": "nomi-family-expense-tracker",
   "version": "0.1.0",
-  "description": "Nomi: A Family Expense Tracker Application",
-  "author": "Dian Yuanda",
   "license": "MIT",
+  "description": "Nomi: A Collaborative Expense Tracker Application",
   "scripts": {
     "dev": "next dev --turbopack",
     "lint": "eslint .",
